# Dual_Arm_3D_BPP

output/: domain.pddl  initial_scene.json  problem.pddl
simulator/: README.md  pyproject.toml
simulator/config/: render.settings.usda  render_.settings.usd
simulator/descriptions/isaac/: box_500_500_300.usd  box_500_500_400.usd  box_500_500_500.usd
simulator/descriptions/world/: example_world.usda  turtle_example.usd
simulator/logs/: trajectories.json  trajectories2.json
simulator/scripts/: binpacking_environment.py  convert_obj_to_usd.py  download_ycb_dataset.py  isaac_moveit.py  open_isaacsim.py
simulator/scripts/components/: widget.py
simulator/scripts/test/: load_trajectories.py  mesh_center_convert.py  mesh_downsample.py  stubgen.py
simulator/src/simulator/: bpp_action_parser.py  bpp_ros2_dualArm_sim_node.py  bpp_ros2_sim_node.py  debug.py
src/ros2_interfaces/: CMakeLists.txt  package.xml
src/ros2_interfaces/action/: PickAndPlace.action
src/ros2_interfaces/srv/: PickAndPlace.srv
