[project]
name = "simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Azusa",email = "zifeng.liao@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "simulator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
